# PersonDetection

./: CMakeLists.txt~  README.md  package.xml~
.svn/: entries
.svn/text-base/: CMakeLists.txt.svn-base  Makefile.sebastian.svn-base  manifest.xml.svn-base  package.xml.svn-base
person_detection/: CMakeListsSebastian.txt  README.txt  mainpage.dox  manifest.xml  package.xml
person_detection/config/.svn/: entries
person_detection/launch/: angen_openni2.launch  angen_person_detection.launch  domocasa_person_detection.launch  person_detection.launch  person_recognition.launch
person_detection/launch/.svn/: entries
person_detection/launch/.svn/text-base/: person_detection.launch.svn-base
person_detection/src/: main_ground_based_people_detection.cpp
person_detection/src/.svn/: entries
person_detection/src/.svn/text-base/: main_ground_based_people_detection.cpp.svn-base  person_struct.hpp.svn-base
person_detection_msgs/: CMakeLists.txt  package.xml
person_detection_msgs/.svn/: entries
person_detection_msgs/.svn/text-base/: CMakeLists.txt.rosbuild.svn-base
person_detection_msgs/msg/: PersonVector.msg
person_detection_msgs/msg/.svn/: entries
person_detection_msgs/msg/.svn/text-base/: Person.msg.svn-base
