<package>
  <name>person_detection</name>
  <version>1.0.0</version>
  <description> 
    This package contains a pre-trained SVM classifier to detect
    standing and sitting persons in incoming PointCloud data.
    The algorithm expects that the pose of the ground plane
    is known, which is needed for the cluster segmentation.
  </description>

  <author  email="9starke@informatik.uni-hamburg.de">Sebastian Starke</author>
  <maintainer email="9starke@informatik.uni-hamburg.de">Sebastian Starke</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/person_detection</url>


  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>person_detection_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>face_detection_msgs</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>person_detection_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>face_detection_msgs</run_depend>
  <run_depend>image_transport</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>urdf</test_depend> -->

</package>
